--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,51 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>jiux.net.raft.start</groupId>
-  <artifactId>demo</artifactId>
+  <artifactId>raft-start</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>raft-core</module>
+  </modules>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
+    <log4j.version>2.17.1</log4j.version>
+    <slf4j.version>1.7.21</slf4j.version>
   </properties>
+
+  <dependencyManagement>
+
+    <dependencies>
+      <!-- log -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j-impl</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-jcl</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+    </dependencies>
+
+  </dependencyManagement>
 
 </project>
